--- a/Ex_0715/app/src/main/AndroidManifest.xml
+++ b/Ex_0715/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         tools:targetApi="31">
         <activity
             android:name=".VisibleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EffectActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
