--- a/Ex_0715/app/src/main/AndroidManifest.xml
+++ b/Ex_0715/app/src/main/AndroidManifest.xml
@@ -14,10 +14,16 @@
         android:theme="@style/Theme.Ex_0715"
         tools:targetApi="31">
         <activity
-            android:name=".VisibleActivity"
+            android:name=".MenuActivity"
             android:exported="false" />
         <activity
             android:name=".EffectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VisibleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PopupMenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
