--- a/Ex_0719/app/src/main/AndroidManifest.xml
+++ b/Ex_0719/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Ex_0719"
         tools:targetApi="31">
         <activity
+            android:name=".IntentSubActivity"
+            android:exported="false" />
+        <activity
             android:name=".HandlerWhatActivity"
             android:exported="false" />
         <activity
