--- a/Ex_NaverAPI/app/src/main/AndroidManifest.xml
+++ b/Ex_NaverAPI/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.lece.ex_0720">
+    package="com.lece.ex_naverapi">
 
     <application
         android:allowBackup="true"
@@ -11,13 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ex_0720"
+        android:theme="@style/Theme.Ex_NaverAPI"
         tools:targetApi="31">
         <activity
-            android:name=".SharedPreferencesActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InflaterActivity"
+            android:name=".NaverActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
