--- a/Ex_0725/app/build.gradle
+++ b/Ex_0725/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.lece.ex_0725"
-        minSdk 27
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -35,4 +35,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.github.ajalt.reprint:core:3.3.2@aar' // required: supports marshmallow devices
+    implementation 'com.github.ajalt.reprint:reprint_spass:3.3.2@aar' // optional: deprecated support for pre-marshmallow Samsung devices
+    implementation 'com.github.ajalt.reprint:rxjava:3.3.2@aar' // optional: the RxJava 1 interface
+    implementation 'com.github.ajalt.reprint:rxjava2:3.3.2@aar' // optional: the RxJava 2 interface
+
+    implementation 'com.github.thomper:sweet-alert-dialog:1.4.0' //다이얼로그 관련
 }
