--- a/Ex_0725/app/src/main/AndroidManifest.xml
+++ b/Ex_0725/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.lece.ex_0725">
+    package="com.lece.ex_0725" >
+    <!-- Samsung fingerprint permission, only required if you include the Spass module -->
+    <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY" />
 
     <application
         android:allowBackup="true"
@@ -12,10 +14,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ex_0725"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".FingerprintActivity"
+            android:exported="false" />
         <activity
             android:name=".NumberActivity"
-            android:exported="true">
+            android:exported="false" />
+        <activity
+            android:name=".SweetAlertActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
