--- a/Ex_0727/app/src/main/AndroidManifest.xml
+++ b/Ex_0727/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.lece.ex_0726">
-    <!-- 다이렉트로 전화를 걸어주는 권한 -->
+    package="com.lece.ex_0727">
+
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- 휴대폰 안에 폴더를 생성하던지 파일을 생성하는 권한 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!--  -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,14 +16,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ex_0726"
+        android:theme="@style/Theme.Ex_0727"
         tools:targetApi="31">
-        <activity
-            android:name=".GameActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PermissionActivity"
-            android:exported="true" />
         <activity
             android:name=".SqliteActivity"
             android:exported="true">
